--- a/DMX_ArtNet/Inc/eth/fs/index.html
+++ b/DMX_ArtNet/Inc/eth/fs/index.html
@@ -69,7 +69,7 @@
 					Input
 				</div>
 
-				<label>Universum <input type="number" min="0" max="32767" name="universe"></label>
+				<label>Universe <input type="number" min="0" max="32767" name="universe"></label>
 
 				<label>Name <input type="text" maxlength="18" name="name"></label>
 
