Fixing all the configuration issues
OLED:
- Hardfault when up/down button was pressed in IP overview
- ArtNET-Universe was not set correctly
- Description text did not scroll correctly

Flash:
- Reset status correctly when clearing config page
- Don't purge flash on every power up

ArtNet:
- Did not report input universe correctly
- Failover state was applied continuously, resulting in cpu hogging

Web Interface:
- Added display of Firmware ID / Version
- Fixed bug in IP-Options regarding checkboxes
- Deferred network apply until after post request was handled
- Fixed bug with wrong redirect after applying ip settings
- Rewritten post-handler to support post requests that are split into multiple packets

--- a/DMX_ArtNet/Inc/eth/fs/device.html
+++ b/DMX_ArtNet/Inc/eth/fs/device.html
@@ -24,7 +24,7 @@
             for (const [key, value] of Object.entries(obj)) {
                 var elem = document.getElementsByName(key)[0];
                 if (elem.type == 'checkbox') {
-                    elem.checked = value;
+                    elem.checked = value == "1" ? 1 : 0;
                 } else if (elem.type == 'radio') {
                     elem = document.querySelector(`input[name='${key}'][value='${value}']`);
                     elem.checked = 1;
@@ -86,6 +86,12 @@
                     <label>IP<input type="text" name="a_ip" readonly></label>
                     <label>Netmask<input type="text" name="a_mask" readonly></label>
                     <label>Gateway<input type="text" name="a_gw" readonly></label>
+                </fieldset>
+
+                <fieldset>
+                    <legend>Firmware</legend>
+                    <label>Version<input type="text" name="f_v" readonly></label>
+                    <label>ArtNET-ID<input type="text" name="f_id" readonly></label>
                 </fieldset>
 
                 <input id="submit" type="submit" value="Apply Settings">
